fixing permgenspace problem on mac coming form signavio app